# lib/db/src/schema/index.ts
@@ -6,3 +6,4 @@ export * from "./importJobs";
 export * from "./sessions";
 export * from "./conversations";
 export * from "./messages";
+export * from "./contacts";
